@@ -1,3 +1,7 @@
+2003-08-08  Matthias Clasen  <maclas@gmx.de>
+
+	* demos/gtk-demo/appwindow.c (do_appwindow): Hide the resize grip when maximized or fullscreen.
+
 2003-08-07  Tor Lillqvist  <tml@iki.fi>
 
 	* gdk/win32/gdkinput-win32.h
